// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loads more comments 1`] = `
<div
  className="Flex-root App-root Flex-justifyCenter Flex-alignCenter"
>
  <div
    className="Stream-root"
  >
    <h1
      className="Typography-root Typography-heading1 Typography-colorTextPrimary Typography-gutterBottom"
    >
      Talk NEO
    </h1>
    <form
      autoComplete="off"
      onSubmit={[Function]}
    >
      <div>
        <textarea
          className="PostCommentForm-textarea"
          name="body"
          onChange={[Function]}
          value=""
        />
      </div>
      <div
        className="PostCommentForm-postButtonContainer"
      >
        <button
          className="BaseButton-root Button-root Button-sizeRegular Button-colorPrimary Button-variantFilled"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
        >
          Post
        </button>
      </div>
    </form>
    <div
      aria-live="polite"
      className="Flex-root Flex-itemGutter Flex-alignFlexStart Flex-directionColumn"
      id="talk-comments-stream-log"
      role="log"
    >
      <div
        className="Flex-root Flex-itemGutter Flex-alignFlexStart Flex-directionColumn"
      >
        <div
          role="article"
        >
          <div
            className="Flex-root TopBar-root Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn"
          >
            <span
              className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
            >
              Markus
            </span>
            <time
              className="Timestamp-root RelativeTime-root"
              dateTime="2018-07-06T18:24:00.000Z"
              title="2018-07-06T18:24:00.000Z"
            >
              2018-07-06T18:24:00.000Z
            </time>
          </div>
          <p
            className="Typography-root Typography-bodyCopy Typography-colorTextPrimary"
          >
            Joining Too
          </p>
          <div
            className="Comment-footer"
          />
        </div>
      </div>
      <div
        className="Flex-root Flex-itemGutter Flex-alignFlexStart Flex-directionColumn"
      >
        <div
          role="article"
        >
          <div
            className="Flex-root TopBar-root Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn"
          >
            <span
              className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
            >
              Lukas
            </span>
            <time
              className="Timestamp-root RelativeTime-root"
              dateTime="2018-07-06T18:20:00.000Z"
              title="2018-07-06T18:20:00.000Z"
            >
              2018-07-06T18:20:00.000Z
            </time>
          </div>
          <p
            className="Typography-root Typography-bodyCopy Typography-colorTextPrimary"
          >
            What's up?
          </p>
          <div
            className="Comment-footer"
          />
        </div>
      </div>
      <div
        className="Flex-root Flex-itemGutter Flex-alignFlexStart Flex-directionColumn"
      >
        <div
          role="article"
        >
          <div
            className="Flex-root TopBar-root Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn"
          >
            <span
              className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
            >
              Isabelle
            </span>
            <time
              className="Timestamp-root RelativeTime-root"
              dateTime="2018-07-06T18:14:00.000Z"
              title="2018-07-06T18:14:00.000Z"
            >
              2018-07-06T18:14:00.000Z
            </time>
          </div>
          <p
            className="Typography-root Typography-bodyCopy Typography-colorTextPrimary"
          >
            Hey!
          </p>
          <div
            className="Comment-footer"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders comment stream 1`] = `
<div
  className="Flex-root App-root Flex-justifyCenter Flex-alignCenter"
>
  <div
    className="Stream-root"
  >
    <h1
      className="Typography-root Typography-heading1 Typography-colorTextPrimary Typography-gutterBottom"
    >
      Talk NEO
    </h1>
    <form
      autoComplete="off"
      onSubmit={[Function]}
    >
      <div>
        <textarea
          className="PostCommentForm-textarea"
          name="body"
          onChange={[Function]}
          value=""
        />
      </div>
      <div
        className="PostCommentForm-postButtonContainer"
      >
        <button
          className="BaseButton-root Button-root Button-sizeRegular Button-colorPrimary Button-variantFilled"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
        >
          Post
        </button>
      </div>
    </form>
    <div
      aria-live="polite"
      className="Flex-root Flex-itemGutter Flex-alignFlexStart Flex-directionColumn"
      id="talk-comments-stream-log"
      role="log"
    >
      <div
        className="Flex-root Flex-itemGutter Flex-alignFlexStart Flex-directionColumn"
      >
        <div
          role="article"
        >
          <div
            className="Flex-root TopBar-root Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn"
          >
            <span
              className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
            >
              Markus
            </span>
            <time
              className="Timestamp-root RelativeTime-root"
              dateTime="2018-07-06T18:24:00.000Z"
              title="2018-07-06T18:24:00.000Z"
            >
              2018-07-06T18:24:00.000Z
            </time>
          </div>
          <p
            className="Typography-root Typography-bodyCopy Typography-colorTextPrimary"
          >
            Joining Too
          </p>
          <div
            className="Comment-footer"
          />
        </div>
      </div>
      <div
        className="Flex-root Flex-itemGutter Flex-alignFlexStart Flex-directionColumn"
      >
        <div
          role="article"
        >
          <div
            className="Flex-root TopBar-root Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn"
          >
            <span
              className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
            >
              Lukas
            </span>
            <time
              className="Timestamp-root RelativeTime-root"
              dateTime="2018-07-06T18:20:00.000Z"
              title="2018-07-06T18:20:00.000Z"
            >
              2018-07-06T18:20:00.000Z
            </time>
          </div>
          <p
            className="Typography-root Typography-bodyCopy Typography-colorTextPrimary"
          >
            What's up?
          </p>
          <div
            className="Comment-footer"
          />
        </div>
      </div>
      <button
        aria-controls="talk-comments-stream-log"
        className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantOutlined Button-fullWidth"
        disabled={false}
        id="talk-comments-stream-loadMore"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
      >
        Load More
      </button>
    </div>
  </div>
</div>
`;
